# mt

./: .gitignore  AGENTS.md  README.md  debug_tool.py  environment.yml  eval.py  finetune.py  finetune_dataset.py  pyproject.toml  requirements.txt  train.py
.harness/: agent.md
.mavis/plans/: cognitive-computational-review.yaml  decision-cycle2.json
analysis/: contamination.py  no_history.py
analysis/OOD_generalization/: additional_generalization.py  generalization.py  generalization_custom_metrics.py  openloop.py  privileged.py
analysis/baseline_model_compare/: ceiling.py  rational_model_compare.py  rescola_wagner_model_compare.py  rescorla_wagner_model_compare.py
analysis/neural_alignment/: extract.py
docs/: COGNITIVE_MODELS.md  Design Doc.md  PROJECT_STATUS.md  REFACTOR_REPORT.md  TRAIN_8B_GUIDE.md  Untitled.md  behavioral_modeling_dialogue_report.md  centaur-eval-design.md  centaur-eval-handoff.md  why need agent docs.md  未命名 1.md
docs/agents/: ARCHITECTURE.md  CONVENTIONS.md  Hadnoff.md  PROJECT.md  agent-rules.md
docs/design_docs/: DataDesign.md  (+5 more)
execution/: eval_finetune.py  smoke_cog_pipeline.py
outputs/: analysis_e0_vs_e2_by_task.csv  analysis_e1_adaptation_curve.csv
scripts/: check_data_contract.py  codetest.ipynb  e0_e3_minitaur.slurm  eval_finetune.py  finetune_llm.py  gpu_task.sh  llm_finetune_v100.slurm  monitor_hardware.py  preflight.slurm  run_generalized_context.py  run_generalized_context.sh  smoke_cog_pipeline.py  smoke_cognitive_pipeline.py  smoke_e0_e3.slurm  train_8b_two_days.sh  train_cognitive_model.py  train_cognitive_model.sh
(+221 files in other folders)
